--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
+    <link rel="stylesheet" href="/public/js/css/app.css">
     <title>React App</title>
   </head>
   <body>
@@ -18,5 +19,7 @@
       To begin the development, run `npm start` in this folder.
       To create a production bundle, use `npm run build`.
     -->
+    <script src="/public/js/vendor.bundle.js"></script>
+    <script src="/public/js/app.js"></script>
   </body>
 </html>
