--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
     <link rel="stylesheet" href="/public/js/css/app.css">
-    <title>React App</title>
+    <title>ICYAH</title>
   </head>
   <body>
     <div id="root"></div>
